--- a/index.html
+++ b/index.html
@@ -3,89 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AR Model Viewer</title>
+  <title>Cooler Topper AR</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
+      font-family: sans-serif;
       text-align: center;
+      background: #f9f9f9;
+    }
+    h1 {
+      background: red;
+      color: #fff;
       margin: 0;
-      padding: 0;
-      background-color: #f9f9f9;
-      color: #333;
+      padding: 15px;
     }
-
-    header {
-      background-color: #c40000;
-      color: white;
-      padding: 20px 10px;
+    img.center {
+      max-width: 90%;
+      height: auto;
+      margin: 40px 0 20px;
     }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.8em;
+    a.ar-btn {
+      display: inline-block;
+      background: #007bff;
+      color: #fff;
+      padding: 12px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
     }
-
-    #ar-button {
-      margin-top: 50px;
-    }
-
-    #ar-button img {
-      cursor: pointer;
-      transition: transform 0.2s ease;
-    }
-
-    #ar-button img:hover {
-      transform: scale(1.05);
-    }
-
-    p {
-      font-size: 1em;
-      margin-top: 10px;
-    }
-
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.4em;
-      }
-
-      #ar-button img {
-        width: 120px;
-      }
+    a.ar-btn:hover {
+      background: #0056b3;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Cooler Topper</h1>
-  </header>
+  <h1>Cooler Topper</h1>
 
-  <div id="ar-button">
-    <!-- AR button will appear here -->
-  </div>
+  <img src="your-center-image.jpg" alt="Cooler Topper" class="center" />
+
+  <div id="ar-button"></div>
 
   <script>
-    const isiOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
+    const isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
     const isAndroid = /Android/i.test(navigator.userAgent);
 
-    if (isiOS) {
-      document.getElementById("ar-button").innerHTML = `
-        <a rel="ar" href="AR_DQ2049.usdz">
-          <img src="ar-button.png" alt="View in AR" width="150" />
-        </a>
-        <p>Tap to view in AR (iOS only)</p>
-      `;
+    const arBtn = document.getElementById("ar-button");
+
+    if (isIOS) {
+      arBtn.innerHTML = `<a href="AR_DQ2049.usdz" rel="ar" class="ar-btn">View in AR (iOS)</a>`;
     } else if (isAndroid) {
-      document.getElementById("ar-button").innerHTML = `
-        <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;S.browser_fallback_url=https://creative-ww.github.io/artest/;end;">
-          <img src="ar-button.png" alt="View in AR" width="150" />
-        </a>
-        <p>Tap to view in AR (Android only)</p>
-      `;
+      arBtn.innerHTML = `<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;" class="ar-btn">View in AR (Android)</a>`;
     } else {
-      document.getElementById("ar-button").innerHTML = `
-        <p>This AR experience is only available on iOS and Android mobile devices.</p>
-      `;
+      arBtn.textContent = "AR is only supported on iOS and Android devices.";
     }
   </script>
 
