--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
     h1 {
       background: red;
-      color: #fff;
+      color: #E10600;
       margin: 0;
       padding: 15px;
     }
@@ -41,7 +41,7 @@
 
   <h1>Cooler Topper</h1>
 
-  <img src="your-center-image.jpg" alt="Cooler Topper" class="center" />
+  <img src="CoolerTopper.png" alt="Cooler Topper" class="center" />
 
   <div id="ar-button"></div>
 
