--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       margin: 0;
       font-family: sans-serif;
       text-align: center;
-      background: #E10600;
+      background: #fff;
     }
     h1 {
       background: red;
-      color: #fff;
+      color: #E10600;
       margin: 0;
       padding: 15px;
     }
