--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
       background: #E10600;
       color: white;
       margin: 0;
-      padding: 15px;
+      padding: 12px 15px; /* slightly smaller padding */
+      font-size: 1.5rem; /* smaller font */
     }
     .center-image {
+      display: block;
+      margin: 40px auto 20px;
       max-width: 90%;
-      margin: 40px 0 20px;
     }
     .ar-img-button {
       width: 150px;
       cursor: pointer;
       transition: transform 0.2s;
+      margin-top: -20px; /* moved upward */
     }
     .ar-img-button:hover {
       transform: scale(1.05);
