--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cooler Topper AR</title>
   <style>
     body {
@@ -15,19 +15,16 @@
       background: #E10600;
       color: white;
       margin: 0;
-      padding: 12px 15px;
-      font-size: 1.5rem;
+      padding: 15px;
     }
     .center-image {
-      display: block;
-      margin: 40px auto 20px;
       max-width: 90%;
+      margin: 40px 0 20px;
     }
     .ar-img-button {
       width: 150px;
       cursor: pointer;
       transition: transform 0.2s;
-      margin-top: -10px;
     }
     .ar-img-button:hover {
       transform: scale(1.05);
@@ -50,7 +47,7 @@
 
     if (isIOS) {
       arButton.innerHTML = `
-        <a href="AR_DQ2049.usdz">
+        <a rel="ar" href="AR_DQ2049.usdz">
           <img src="ar-button.png" alt="View in AR" class="ar-img-button" />
         </a>`;
     } else if (isAndroid) {
