--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cooler Topper AR</title>
   <style>
     body {
@@ -17,7 +17,7 @@
       color: #fff;
       margin: 0;
       padding: 12px;
-      font-size: 1.4rem; /* smaller font */
+      font-size: 1.8rem;
     }
 
     img.center-image {
@@ -26,33 +26,14 @@
       display: block;
     }
 
-    /* Container to position the AR button and icon */
-    .ar-button {
-      display: inline-block;
-      position: relative;
-      margin: 20px auto;
-      cursor: pointer;
-    }
-
-    .ar-button img.main-btn {
+    .ar-button img {
       width: 150px;
+      cursor: pointer;
       transition: transform 0.2s;
-      display: block;
     }
 
-    .ar-button img.main-btn:hover {
+    .ar-button img:hover {
       transform: scale(1.05);
-    }
-
-    /* The overlay icon */
-    .ar-icon {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      width: 24px;
-      height: 24px;
-      pointer-events: none; /* so clicks pass through */
-      opacity: 0.9;
     }
 
     .fallback {
@@ -73,24 +54,17 @@
   <script>
     const ios = /iPhone|iPad|iPod/i.test(navigator.userAgent);
     const android = /Android/i.test(navigator.userAgent);
-    const container = document.getElementById("ar-button");
+    const button = document.getElementById("ar-button");
     const fallback = document.getElementById("fallback");
 
-    // URL for the small AR icon overlay - replace with your own icon if you have it
-    const arIconURL = "ar-icon.png";
-
     if (ios) {
-      container.innerHTML = `
-        <a rel="ar" href="AR_DQ2049.usdz">
-          <img src="ar-button.png" alt="View in AR" class="main-btn" />
-          <img src="${arIconURL}" alt="AR Icon" class="ar-icon" />
-        </a>`;
+      button.innerHTML = `<a rel="ar" href="AR_DQ2049.usdz">
+        <img src="ar-button.png" alt="View in AR" />
+      </a>`;
     } else if (android) {
-      container.innerHTML = `
-        <a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">
-          <img src="ar-button.png" alt="View in AR" class="main-btn" />
-          <img src="${arIconURL}" alt="AR Icon" class="ar-icon" />
-        </a>`;
+      button.innerHTML = `<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">
+        <img src="ar-button.png" alt="View in AR" />
+      </a>`;
     } else {
       fallback.textContent = "AR is only supported on iOS and Android devices.";
     }
