--- a/index.html
+++ b/index.html
@@ -20,20 +20,27 @@
       font-size: 1.8rem;
     }
 
-    img.center-image {
-      max-width: 90%;
+    .ar-button {
       margin: 40px auto 20px;
-      display: block;
+      max-width: 150px;
     }
 
     .ar-button img {
-      width: 150px;
+      width: 100%;
       cursor: pointer;
       transition: transform 0.2s;
+      display: block;
+      margin: 0 auto;
     }
 
     .ar-button img:hover {
       transform: scale(1.05);
+    }
+
+    img.center-image {
+      max-width: 90%;
+      margin: 20px auto 40px;
+      display: block;
     }
 
     .fallback {
@@ -46,9 +53,11 @@
 <body>
 
   <h1>Cooler Topper</h1>
-  <img src="CoolerTopper.png" alt="Cooler Topper" class="center-image" />
 
   <div id="ar-button" class="ar-button"></div>
+
+  <img src="CoolerTopper.png" alt="Cooler Topper" class="center-image" />
+
   <div id="fallback" class="fallback"></div>
 
   <script>
