--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
       font-size: 1.8rem;
     }
 
-    .ar-button {
+    .center-image {
+      max-width: 90%;
       margin: 40px auto 20px;
-      max-width: 150px;
+      display: block;
+    }
+
+    .ar-button {
+      margin: 20px auto 40px;
+      max-width: 90%;
     }
 
     .ar-button img {
-      width: 100%;
+      max-width: 90%;
       cursor: pointer;
       transition: transform 0.2s;
       display: block;
@@ -35,12 +41,6 @@
 
     .ar-button img:hover {
       transform: scale(1.05);
-    }
-
-    img.center-image {
-      max-width: 90%;
-      margin: 20px auto 40px;
-      display: block;
     }
 
     .fallback {
@@ -54,9 +54,17 @@
 
   <h1>Cooler Topper</h1>
 
+  <!-- Here the Cooler Topper image is replaced by ar-button.png -->
+  <img src="ar-button.png" alt="View in AR" class="center-image" />
+
   <div id="ar-button" class="ar-button"></div>
 
-  <img src="CoolerTopper.png" alt="Cooler Topper" class="center-image" />
+  <!-- Here the AR button image replaced by CoolerTopper.png inside the AR button -->
+  <div id="ar-button" class="ar-button">
+    <!-- This will be overwritten by JS -->
+  </div>
+
+  <img src="CoolerTopper.png" alt="Cooler Topper" style="display:none;" />
 
   <div id="fallback" class="fallback"></div>
 
@@ -68,11 +76,11 @@
 
     if (ios) {
       button.innerHTML = `<a rel="ar" href="AR_DQ2049.usdz">
-        <img src="ar-button.png" alt="View in AR" />
+        <img src="CoolerTopper.png" alt="View in AR" />
       </a>`;
     } else if (android) {
       button.innerHTML = `<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">
-        <img src="ar-button.png" alt="View in AR" />
+        <img src="CoolerTopper.png" alt="View in AR" />
       </a>`;
     } else {
       fallback.textContent = "AR is only supported on iOS and Android devices.";
