--- a/index.html
+++ b/index.html
@@ -20,26 +20,23 @@
       font-size: 1.8rem;
     }
 
-    .center-image {
-      max-width: 90%;
+    #ar-button {
+      display: inline-block;
       margin: 40px auto 20px;
-      display: block;
-    }
-
-    .ar-button {
-      margin: 20px auto 40px;
-      max-width: 90%;
-    }
-
-    .ar-button img {
       max-width: 90%;
       cursor: pointer;
-      transition: transform 0.2s;
-      display: block;
-      margin: 0 auto;
     }
 
-    .ar-button img:hover {
+    #ar-button img {
+      width: 100%;
+      max-width: 400px; /* adjust max size as needed */
+      height: auto;
+      display: block;
+      margin: 0 auto;
+      transition: transform 0.2s;
+    }
+
+    #ar-button img:hover {
       transform: scale(1.05);
     }
 
@@ -54,17 +51,7 @@
 
   <h1>Cooler Topper</h1>
 
-  <!-- Here the Cooler Topper image is replaced by ar-button.png -->
-  <img src="ar-button.png" alt="View in AR" class="center-image" />
-
-  <div id="ar-button" class="ar-button"></div>
-
-  <!-- Here the AR button image replaced by CoolerTopper.png inside the AR button -->
-  <div id="ar-button" class="ar-button">
-    <!-- This will be overwritten by JS -->
-  </div>
-
-  <img src="CoolerTopper.png" alt="Cooler Topper" style="display:none;" />
+  <div id="ar-button"></div>
 
   <div id="fallback" class="fallback"></div>
 
