--- a/index.html
+++ b/index.html
@@ -1,78 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cooler Topper AR</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background: #f9f9f9;
-      text-align: center;
-    }
-
-    h1 {
-      background: #E10600;
-      color: #fff;
-      margin: 0;
-      padding: 12px;
-      font-size: 1.8rem;
-    }
-
-    #ar-button {
-      display: inline-block;
-      margin: 40px auto 20px;
-      max-width: 90%;
-      cursor: pointer;
-    }
-
-    #ar-button img {
-      width: 100%;
-      max-width: 400px; /* adjust max size as needed */
-      height: auto;
-      display: block;
-      margin: 0 auto;
-      transition: transform 0.2s;
-    }
-
-    #ar-button img:hover {
-      transform: scale(1.05);
-    }
-
-    .fallback {
-      color: #666;
-      font-size: 0.9rem;
-      margin-top: 10px;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Cooler Topper AR</title>
+<style>
+  body {
+    margin: 0; font-family: sans-serif; background: #f9f9f9; text-align: center;
+  }
+  h1 {
+    background: #E10600; color: #fff; margin: 0; padding: 12px; font-size: 1.8rem;
+  }
+  #ar-button a img {
+    max-width: 400px; width: 90vw; height: auto; margin: 40px auto 20px; cursor: pointer;
+    display: block; transition: transform 0.2s;
+  }
+  #ar-button a img:hover {
+    transform: scale(1.05);
+  }
+  .fallback {
+    color: #666; font-size: 0.9rem; margin-top: 10px;
+  }
+</style>
 </head>
 <body>
 
-  <h1>Cooler Topper</h1>
+<h1>Cooler Topper</h1>
+<div id="ar-button"></div>
+<div class="fallback" id="fallback"></div>
 
-  <div id="ar-button"></div>
+<script>
+  const ua = navigator.userAgent;
+  const button = document.getElementById("ar-button");
+  const fallback = document.getElementById("fallback");
 
-  <div id="fallback" class="fallback"></div>
-
-  <script>
-    const ios = /iPhone|iPad|iPod/i.test(navigator.userAgent);
-    const android = /Android/i.test(navigator.userAgent);
-    const button = document.getElementById("ar-button");
-    const fallback = document.getElementById("fallback");
-
-    if (ios) {
-      button.innerHTML = `<a rel="ar" href="AR_DQ2049.usdz">
-        <img src="CoolerTopper.png" alt="View in AR" />
-      </a>`;
-    } else if (android) {
-      button.innerHTML = `<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">
-        <img src="CoolerTopper.png" alt="View in AR" />
-      </a>`;
-    } else {
-      fallback.textContent = "AR is only supported on iOS and Android devices.";
-    }
-  </script>
+  if (/iPhone|iPad|iPod/i.test(ua)) {
+    button.innerHTML = `<a rel="ar" href="AR_DQ2049.usdz">
+      <img src="CoolerTopper.png" alt="View in AR" />
+    </a>`;
+  } else if (/Android/i.test(ua)) {
+    button.innerHTML = `<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">
+      <img src="CoolerTopper.png" alt="View in AR" />
+    </a>`;
+  } else {
+    fallback.textContent = "AR is only supported on iOS and Android devices.";
+  }
+</script>
 
 </body>
 </html>
