--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     margin: 0; font-family: sans-serif; background: #f9f9f9; text-align: center;
   }
   h1 {
-    background: #E10600; color: #fff; margin: 0; padding: 12px; font-size: 1.5rem;
+    background: #E10600; color: #fff; margin: 0; padding: 10px; font-size: 1.5rem;
   }
   #ar-button a img {
-    max-width: 500px; width: 90vw; height: auto; margin: 40px auto 20px; cursor: pointer;
-    display: block; transition: transform 0.2s;
+    max-width: 480px; /* increased size */
+    width: 95vw;
+    height: auto;
+    margin: 40px auto 20px;
+    cursor: pointer;
+    display: block;
+    transition: transform 0.2s;
   }
   #ar-button a img:hover {
     transform: scale(1.05);
