--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
   h1 {
     background: #E10600; color: #fff; margin: 0; padding: 10px; font-size: 1.5rem;
   }
+  #ar-button a {
+    display: inline-block;
+    margin: 0 auto;
+  }
   #ar-button a img {
-    max-width: 600px; width: 100vw; height: auto; margin: 40px auto 20px;
-    cursor: pointer; display: block; transition: transform 0.2s;
+    max-width: 600px; width: 100vw; height: auto;
+    margin: 40px auto 20px; cursor: pointer; display: block;
+    transition: transform 0.2s;
   }
   #ar-button a img:hover {
     transform: scale(1.05);
