--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     color: #666; font-size: 0.9rem; margin-top: 10px;
   }
   .tap-to-ar {
-    background: #E10600; color: #fff; font-size: 0.85rem;
+    background: #232323; color: #fff; font-size: .95rem;
     padding: 8px 0; position: fixed; bottom: 0; width: 100%; user-select: none;
   }
 </style>
