--- a/index.html
+++ b/index.html
@@ -6,67 +6,25 @@
 <title>Cooler Topper AR</title>
 <style>
   body {
-    margin: 0;
-    font-family: sans-serif;
-    background: #f9f9f9;
-    text-align: center;
+    margin: 0; font-family: sans-serif; background: #f9f9f9; text-align: center;
   }
-
   h1 {
-    background: #E10600;
-    color: #fff;
-    margin: 0;
-    padding: 10px;
-    font-size: 1.4rem;
+    background: #E10600; color: #fff; margin: 0; padding: 10px; font-size: 1.4rem;
   }
-
-  #ar-button {
-    display: flex;
-    justify-content: center;
-    margin: 40px auto 20px;
+  #ar-button a {
+    display: inline-block;
+    margin: 0 auto;
   }
-
-  .image-wrapper {
-    position: relative;
-    max-width: 600px;
-    width: 100vw;
-  }
-
-  .image-wrapper img {
-    width: 100%;
-    height: auto;
-    cursor: pointer;
+  #ar-button a img {
+    max-width: 600px; width: 100vw; height: auto;
+    margin: 40px auto 20px; cursor: pointer; display: block;
     transition: transform 0.2s;
-    display: block;
   }
-
-  .image-wrapper img:hover {
+  #ar-button a img:hover {
     transform: scale(1.05);
   }
-
-  /* Decorative black circle with tap icon */
-  .tap-icon {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    width: 48px;
-    height: 48px;
-    background: black;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .tap-icon img {
-    width: 24px;
-    height: 24px;
-  }
-
   .fallback {
-    color: #666;
-    font-size: 0.9rem;
-    margin-top: 10px;
+    color: #666; font-size: 0.9rem; margin-top: 10px;
   }
 </style>
 </head>
@@ -81,19 +39,10 @@
   const btn = document.getElementById("ar-button");
   const fb = document.getElementById("fallback");
 
-  const imageWrapper = `
-    <div class="image-wrapper">
-      <img src="CoolerTopper.png" alt="View in AR" />
-      <div class="tap-icon">
-        <img src="tap-icon.png" alt="Tap Icon" />
-      </div>
-    </div>
-  `;
-
   if (/iPhone|iPad|iPod/i.test(ua)) {
-    btn.innerHTML = `<a rel="ar" href="AR_DQ2049.usdz">${imageWrapper}</a>`;
+    btn.innerHTML = `<a rel="ar" href="AR_DQ2049.usdz"><img src="CoolerTopper.png" alt="View in AR" /></a>`;
   } else if (/Android/i.test(ua)) {
-    btn.innerHTML = `<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;">${imageWrapper}</a>`;
+    btn.innerHTML = `<a href="intent://arvr.google.com/scene-viewer/1.0?file=https://creative-ww.github.io/artest/AR_DQ2049.glb&mode=ar_preferred#Intent;scheme=https;package=com.google.android.googlequicksearchbox;action=android.intent.action.VIEW;end;"><img src="CoolerTopper.png" alt="View in AR" /></a>`;
   } else {
     fb.textContent = "AR is only supported on iOS and Android devices.";
   }
