--- a/index.html
+++ b/index.html
@@ -6,25 +6,54 @@
 <title>Cooler Topper AR</title>
 <style>
   body {
-    margin: 0; font-family: sans-serif; background: #f9f9f9; text-align: center;
+    margin: 0; 
+    font-family: sans-serif; 
+    background: #f9f9f9; 
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
   }
   h1 {
-    background: #E10600; color: #fff; margin: 0; padding: 10px; font-size: 1.4rem;
+    background: #E10600; 
+    color: #fff; 
+    margin: 0; 
+    padding: 10px; 
+    font-size: 1.4rem;
   }
   #ar-button a {
     display: inline-block;
     margin: 0 auto;
   }
   #ar-button a img {
-    max-width: 600px; width: 100vw; height: auto;
-    margin: 40px auto 20px; cursor: pointer; display: block;
+    max-width: 600px; 
+    width: 100vw; 
+    height: auto;
+    margin: 40px auto 20px; 
+    cursor: pointer; 
+    display: block;
     transition: transform 0.2s;
   }
   #ar-button a img:hover {
     transform: scale(1.05);
   }
   .fallback {
-    color: #666; font-size: 0.9rem; margin-top: 10px;
+    color: #666; 
+    font-size: 0.9rem; 
+    margin-top: 10px;
+  }
+  footer {
+    background: #222;
+    color: #ccc;
+    font-size: 0.8rem;
+    padding: 10px 20px;
+    margin-top: auto; /* push footer to bottom */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  footer img {
+    height: 24px;
   }
 </style>
 </head>
@@ -33,6 +62,11 @@
 <h1>Cooler Topper</h1>
 <div id="ar-button"></div>
 <div class="fallback" id="fallback"></div>
+
+<footer>
+  <img src="your-company-logo.png" alt="Company Logo" />
+  <span>© Copyright belongs to me</span>
+</footer>
 
 <script>
   const ua = navigator.userAgent;
