--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <div class="fallback" id="fallback"></div>
 
 <footer>
-  <img src="logo.png" alt="Company Logo" />
-  <div>© 2025 Your Company Name. All rights reserved.</div>
+  <img src="dq_logo.png" alt="Company Logo" />
+  <div>© 2025 Display Quest. All rights reserved.</div>
 </footer>
 
 <script>
