--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
     width: 100%;
     background: #000; /* black background */
     color: #fff;       /* white text */
-    padding: 8px 16px; /* slightly smaller than header */
+    padding: 6px 12px; /* slightly smaller padding */
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 0.8rem;  /* slightly smaller text */
+    font-size: 0.7rem;  /* smaller text */
     box-sizing: border-box;
     z-index: 1000;
   }
 
   footer img {
-    height: 30px; /* smaller logo */
+    height: 20px; /* smaller logo */
   }
 </style>
 </head>
