--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Cooler Topper AR</title>
 <style>
-  body {
+  html, body {
     margin: 0;
     font-family: sans-serif;
-    background: #f9f9f9;
+    background-color: white !important;
+    color: black !important;
+    -webkit-text-fill-color: black !important; /* Safari text color fix */
+    color-scheme: light; /* Hint browser to use light color scheme */
     text-align: center;
     padding: 50px 0;
   }
