--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Cooler Topper AR</title>
 <style>
-  html, body {
+  body {
     margin: 0;
     font-family: sans-serif;
-    background-color: white !important;
-    color: black !important;
-    -webkit-text-fill-color: black !important; /* Safari text color fix */
-    color-scheme: light; /* Hint browser to use light color scheme */
+    background: #f9f9f9;
     text-align: center;
     padding: 50px 0;
   }
