--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="color-scheme" content="light" />
 <title>Cooler Topper AR</title>
 <style>
+  /* Force light mode even if user prefers dark */
+  @media (prefers-color-scheme: dark) {
+    html, body {
+      background: #f9f9f9 !important;
+      color: #000 !important;
+    }
+  }
+
   body {
     margin: 0;
     font-family: sans-serif;
