--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   body {
     margin: 0;
     font-family: sans-serif;
-    background: #f9f9f9;
+    background: #fff;  /* changed from #f9f9f9 to pure white */
     text-align: center;
     padding: 50px 0;
   }
